--- a/KLS_WEB/KLS_WEB/Views/Carriers/Index.cshtml
+++ b/KLS_WEB/KLS_WEB/Views/Carriers/Index.cshtml
@@ -3,7 +3,7 @@
 }
 
 <div class="data-content p-4 text-left">
-    <div class="p-4">
+    <div class="">
         @*<div class="text-left d-flex mb-3">
             <div class="text-uppercase poppins medium size-24 pl-2">Transportistas</div>
             <div style="padding-left:20%;">
