--- a/KLS_WEB/KLS_WEB/Views/Carriers/formCarriers.cshtml
+++ b/KLS_WEB/KLS_WEB/Views/Carriers/formCarriers.cshtml
@@ -13,10 +13,9 @@
         }
     </style>
 }
-
 <div class="data-content p-4 text-left">
-    <div class="p-4">
-        <div class="text-left d-flex mb-3">
+    <div class="">
+        <div class="text-left d-flex">
             <a href="/Carriers">
                 <div class="material-icons icon-red">arrow_back</div>
             </a>
@@ -24,7 +23,6 @@
         </div>
         <div class="row">
             <div class="col-md-4 text-right">
-                
                 <form id="frmRegister" action="#" method="post">
                     <button class="btn btn-sm" type="submit" style="background-color:transparent;">
                         <span class="material-icons" style="color:cornflowerblue;" id="span-icon">
