--- a/KLS_WEB/KLS_WEB/Views/Shared/_Layout.cshtml
+++ b/KLS_WEB/KLS_WEB/Views/Shared/_Layout.cshtml
@@ -46,9 +46,9 @@
         <div>
             <!-- TOP BAR -->
             <div class="top-bar">
-                <div class="pl-4 text-left">
-                    <a href="/" class="d-block pt-2 mt-1">
-                        <img src="/img/LogoKLSNET.png" height="36" alt="KLS">
+                <div class="pl-4 text-left pt-3">
+                    <a href="/" class="mt-1">
+                        <img src="/img/LogoKLSNET.png" height="36" width="100" alt="KLS">
                     </a>
                 </div>
                 <div class="pr-4 text-right">
