--- a/KLS_WEB/KLS_WEB/Views/Carriers/Routes/Index.cshtml
+++ b/KLS_WEB/KLS_WEB/Views/Carriers/Routes/Index.cshtml
@@ -4,7 +4,7 @@
 }
 @{ int id = ViewBag.id; }
 <div class="data-content p-4 text-left">
-    <div class="p-4">
+    <div class="">
         <div class="d-flex flex-nowrap">
             <div class="p-2">
                 <div class="text-left d-flex p-2">
