--- a/KLS_WEB/KLS_WEB/Views/Login/Login.cshtml
+++ b/KLS_WEB/KLS_WEB/Views/Login/Login.cshtml
@@ -35,7 +35,7 @@
                         </label>
                         <div class="form-group">
                             @*<button type="submit" class="btn btn-info form-control">Iniciar Sesión</button>*@
-                            <button type="submit" class="w-100 btn btn-primary btn-center mt-1">Iniciar sesión</button>
+                            <button type="submit" class="w-100 btn btn-primary btn-center mt-1" onclick="$(this).prop('disabled', true)">Iniciar sesión</button>
                         </div>
                     </form>
 
@@ -50,10 +50,13 @@
                                 </button>
                             </div>
                         }
+                        <script>
+                            $('.btn-primary').prop('disabled', false);
+                        </script>
                     }
 
                 </div>
-                <a class="w-100 btn-link text-center d-block pt-3 pb-3 c-pointer size-12">Olvidé mi contraseña</a>
+                <a asp-controller="Login" asp-action="ResetPassword" class="w-100 btn-link text-center d-block pt-3 pb-3 c-pointer size-12">Olvidé mi contraseña</a>
             </div>
         </div>
     </div>
