--- a/KLS_WEB/KLS_WEB/Views/Carriers/formCarriers.cshtml
+++ b/KLS_WEB/KLS_WEB/Views/Carriers/formCarriers.cshtml
@@ -14,7 +14,7 @@
     </style>
 }
 <div class="data-content p-4 text-left">
-    <div class="">
+    <div class="p-4">
         <div class="text-left d-flex">
             <a href="/Carriers">
                 <div class="material-icons icon-red">arrow_back</div>
