--- a/KLS_WEB/KLS_WEB/Views/Catalogs/TypesOfUnits/Index.cshtml
+++ b/KLS_WEB/KLS_WEB/Views/Catalogs/TypesOfUnits/Index.cshtml
@@ -2,7 +2,7 @@
     ViewData["Title"] = "Tipos de unidades";
 }
 
-<div class="p-4">
+<div class="p-2">
     <div class="d-flex flex-nowrap">
         <div class="p-2">
             <div class="text-left d-flex p-2">
@@ -69,13 +69,13 @@
                         </div>
                         <div class="col-md-3">
                             <label class="">Estatus</label>
-                            <select class="form-control" name="estatus" id="estatus">
+                            <select class="form-control form-control-sm" name="estatus" id="estatus">
                                 <option value="1">Activo</option>
                                 <option value="2">Inactivo</option>
                             </select>
                         </div>
                     </div>
-                    <h3>Costos por kilómetro</h3>
+                    <h5>Costos por kilómetro</h5>
                     <div class="row">
                         <div class="col-md-3">
                             <div class="form-group">
@@ -109,7 +109,7 @@
                         </div>
                     </div>
 
-                    <h3>Límites</h3>
+                    <h5>Límites</h5>
                     <div class="row">
                         <div class="col-md-3">
                             <div class="form-group">
