--- a/KLS_WEB/KLS_WEB/Views/Route/Index.cshtml
+++ b/KLS_WEB/KLS_WEB/Views/Route/Index.cshtml
@@ -92,7 +92,7 @@
                 autoWidth: true,
                 //dom: 'Btp',
                 ajax: {
-                    url: '/Route/GetRoute',
+                    url: '/Route/getRoute',
                     dataSrc: ''
                 },
                 columns: [
