--- a/KLS_WEB/KLS_WEB/Views/Carriers/Routes/Index.cshtml
+++ b/KLS_WEB/KLS_WEB/Views/Carriers/Routes/Index.cshtml
@@ -3,8 +3,8 @@
     ViewData["Title"] = "Transportista|Rutas";
 }
 @{ int id = ViewBag.id; }
-<div class="data-content p-4 text-left">
-    <div class="">
+<div class="data-content pt-2 text-left">
+    <div class="p-4">
         <div class="d-flex flex-nowrap">
             <div class="p-2">
                 <div class="text-left d-flex p-2">
@@ -95,12 +95,12 @@
                             </select>
                         </div>
                     </div>
-                    <div class="row">
-                        <div class="col-md-6">
+                    <div class="row pt-3">
+                        @*<div class="col-md-6">
                             <label class="">Costo</label>
                             <input type="number" class="form-control" name="Costo" id="Costo" />
-                        </div>
-                        <div class="col-md-6">
+                        </div>*@
+                        <div class="col-md-4">
                             <label class="">Estatus</label>
                             <select class="form-control form-control-sm" name="Estatus" id="Estatus">
                                 <option value="1">Activo</option>
@@ -108,20 +108,17 @@
                             </select>
                         </div>
                     </div>
-                    <br />
-                    <div class="row">
+                    
+                    <div class="row pt-3">
                         <div class="col-md-12">
                             <label class="">Inventario</label>
                             <table id="table-inventario" class="table table-striped table-bordered display table-hover" width="100%">
                                 <thead>
                                     <tr>
-                                        <th>Marca</th>
-                                        <th>Modelo</th>
-                                        <th>Año</th>
-                                        <th># Serie</th>
-                                        <th>Placa</th>
-                                        <th>Color</th>
-                                        <th>Precio</th>
+                                        <th></th>
+                                        <th>Costo One Way</th>
+                                        <th>Costo Two Way</th>
+                                        <th>Costo Circuito</th>
                                     </tr>
                                 </thead>
                                 <tbody id="info-inventario"></tbody>
@@ -166,11 +163,23 @@
 
                 var jsonInv = [];
                 $.each(dataInventory, function (item, key) {
-                    jsonInv.push({ "Id_Inventario": key.id, "Costo": $("#inv-" + key.id).val() });
+                    //jsonInv.push({
+                    //    "Id_Inventario": key.id,
+                    //    "Circuito": $("#cir-" + key.id).val(),
+                    //    "CostoOne": $("#one-" + key.id).val(),
+                    //    "CostoTwo": $("#two-" + key.id).val(),
+                    //    });
+
+                    jsonInv.push({
+                        "id_inventario": key.id,
+                        "circuito": convertirDecimal("cir-" + key.id),
+                        "costoone": convertirDecimal("one-" + key.id),
+                        "costotwo": convertirDecimal("two-" + key.id),
+                    });
+
                 });
 
                 jsonData["ruta_has_inventario"] = jsonInv;
-                //console.log(jsonData);
                 if (parseInt(idruta) != 0) {
                     if (parseInt($("#idEditar").val()) != 0) {
                         $.post("/Carriers/Routes/putRoutes", jsonData, function (res) {
@@ -192,7 +201,7 @@
                             $("#CiudadOrigen").val(0).trigger('change');
                             $("#EstadoDestino").val(0).trigger('change');
                             $("#CiudadDestino").val(0).trigger('change');
-                            
+
                         }).fail(function (error) {
                             dToast("error", "Error al tratar de guardar el registro", "Error");
                             $(".guardar").attr("disabled", false);
@@ -341,6 +350,14 @@
                         if (indice_cd >= 0) {
                             noc = catCiudad[indice_cd].nombre
                         }
+
+                        var costoOne = 0;
+                        console.log(key);
+                        var inventario = key.ruta_has_inventario;
+                        if (inventario.length) {
+                            costoOne = inventario[0].costoOne;
+                        }
+
                         $("#table-info").append(`
                              <tr>
                                 <td>${nCon(IdGenerado)}</td>
@@ -348,7 +365,7 @@
                                 <td>${catCiudad[indice_co].nombre}</td>
                                 <td>${catEstado[indice_ed].nombre}</td>
                                 <td>${noc}</td>
-                                <td>${key.costo}</td>
+                                <td>$ ${conversion(costoOne)}</td>
                                 <td>`+ statusTable(key.estatus) + `</td>
                                 <td>
                                     <a href="#">
@@ -358,7 +375,6 @@
                                     </a>
                                 </td>
                             </tr>`);
-
                     }
                 });
                 dTable("table-viajes");
@@ -377,7 +393,7 @@
                 try {
                     let indice = DataAirlines.findIndex(service => service.id === idEditar);
                     let rutaI = catRutas.findIndex(service => parseInt(service.id) == parseInt(DataAirlines[indice].id_Ruta));
-                    $("#Costo").val(DataAirlines[indice].costo);
+                    //$("#Costo").val(DataAirlines[indice].costo);
                     $("#EstadoOrigen").val(catRutas[rutaI].id_estadoorigen).trigger('change');
                     $("#CiudadOrigen").val(catRutas[rutaI].id_ciudadorigen).trigger('change');
                     $("#EstadoDestino").val(catRutas[rutaI].id_estadodestino).trigger('change');
@@ -386,8 +402,10 @@
                     $('#Estatus option[value="' + DataAirlines[indice].estatus + '"]').attr("selected", true);
 
                     $.each(DataAirlines[indice].ruta_has_inventario, function (item, keyc) {
-                        //console.log(keyc);
-                        $("#inv-" + keyc.id_Inventario).val(keyc.costo);
+                        console.log(keyc);
+                        $("#cir-" + keyc.id_Inventario).val(conversion(keyc.circuito));
+                        $("#one-" + keyc.id_Inventario).val(conversion(keyc.costoOne));
+                        $("#two-" + keyc.id_Inventario).val(conversion(keyc.costoTwo));
                     });
 
                     $("#modalDiv").modal("show");
@@ -407,35 +425,80 @@
         function getInventario() {
             $("#info-inventario").empty();
             $.get("/Carriers/Inventory/getInventory/", { "IdTransportista":@id}, function (res) {
-                dataInventory = res;
-                $.each(dataInventory, function (item, key) {
-                    //console.log(key);
+                /*dataInventory = res;*/
+                var uniqueArray = removeDuplicates(res, "tipoUnidad");
+                dataInventory = uniqueArray;
+                $.each(uniqueArray, function (item, key) {
                     let indice = catUnidad.findIndex(service => service.id === key.tipoUnidad);
-                    //let inEdit = DataAirlines.findIndex(service => service.id === key.idEditar);
-
+                    console.log(catUnidad[indice]);
                     $("#info-inventario").append(
                         `<tr>
-                            <td>${nCon(key.marca)}</td>
-                            <td>${nCon(key.modelo)}</td>
-                            <td>${nCon(key.anio)}</td>
-                            <td>${nCon(key.noSerie)}</td>
-                            <td>${nCon(key.placa)}</td>
-                            <td>${nCon(key.color)}</td>
-                            <td><input type="number" class="form-control" id="inv-${nCon(key.id)}"></td>
+                            <td>${nCon(catUnidad[indice].nombre)}</td>
+                            <td>
+                             <div class="input-group">
+                                <div class="input-group-prepend">
+                                    <div class="input-group-text">$</div>
+                                </div>
+                                <input type="text" class="form-control form-control-sm" id="one-${nCon(key.id)}" onkeyup="convertirUnidad(this.value,'one-${key.id}')">
+                              </div>
+                            </td>
+                            <td>
+                              <div class="input-group">
+                                <div class="input-group-prepend">
+                                    <div class="input-group-text">$</div>
+                                </div>
+                                <input type="text" class="form-control form-control-sm" id="two-${nCon(key.id)}" onkeyup="convertirUnidad(this.value,'two-${key.id}')">
+                              </div>
+                            </td>
+                            <td>
+                              <div class="input-group">
+                                <div class="input-group-prepend">
+                                    <div class="input-group-text">$</div>
+                                </div>
+                                <input type="text" class="form-control form-control-sm" id="cir-${nCon(key.id)}" onkeyup="convertirUnidad(this.value,'cir-${key.id}')">
+                              </div>
+                            </td>
                         </tr>`
                     );
                 });
             });
         }
 
-        //function guardarInventarios() {
-        //    var jsonInv = [];
-        //    $.each(dataInventory, function (item, key) {
-        //        jsonInv.push({ "Id_Inventario": key.id, "Costo": $("#inv-" + key.id).val() });
-        //        /*console.log($("#inv-"+ key.id).val());*/
-        //    });
-        //    console.log(jsonInv);
-        //}
+        function removeDuplicates(originalArray, prop) {
+            var newArray = [];
+            var lookupObject = {};
+
+            for (var i in originalArray) {
+                lookupObject[originalArray[i][prop]] = originalArray[i];
+            }
+
+            for (i in lookupObject) {
+                newArray.push(lookupObject[i]);
+            }
+            return newArray;
+        }
+
+        function conversion(value) {
+            value = value.toFixed(2)
+            return value.replace(/\D/g, "")
+                .replace(/([0-9])([0-9]{2})$/, '$1.$2')
+                .replace(/\B(?=(\d{3})+(?!\d)\.?)/g, ",");
+        }
+
+        function convertirUnidad(value,id) {
+            value = value.replace(/\D/g, "")
+                .replace(/([0-9])([0-9]{2})$/, '$1.$2')
+                .replace(/\B(?=(\d{3})+(?!\d)\.?)/g, ",");
+            $("#" + id).val();
+            $("#" + id).val(value);
+        }
+
+        function convertirDecimal(id) {
+            decim = $("#"+id).val();
+            decim = String(decim);
+            decim = decim.replace(",", "");
+            return decim;
+        }
 
     </script>
 }
