--- a/KLS_WEB/KLS_WEB/Views/Shared/_Layout.cshtml
+++ b/KLS_WEB/KLS_WEB/Views/Shared/_Layout.cshtml
@@ -178,7 +178,9 @@
         $(document).ready(function () {
             var value = '@HttpContextAccessor.HttpContext.Session.GetString("Nombre")';
             if (value == "") {
-                $.post("Login/Logout", function () {});
+                $.post("Login/Logout", function () {
+                    location.reload();
+                });
             }
 
             updateContainer();
