--- a/KLS_WEB/KLS_WEB/Views/Demand/Index.cshtml
+++ b/KLS_WEB/KLS_WEB/Views/Demand/Index.cshtml
@@ -445,10 +445,12 @@
                 const type = $(this).attr('rel') == 'destino' ? 'Destinations/setDestino' : 'Origins/setOrigen';
                 var jsonData = convertJson($("#frmRegister"));
                 jsonData["Id_Cliente"] = $('#addeditcliente').val();
+                return;
                 if (parseInt($("#Id_Ciudad").val()) != 0 && parseInt($("#Id_Estado").val()) != 0 && parseInt($("#Id_Colonia").val()) != 0) {
                     $.post(`/Clients/${type}`, jsonData, function (res) {
                         dToast("success", "Registro guardado exitosamente.", "Registrado");
                         $(".guardar").attr("disabled", false);
+                        $('select').map((k, e) => $(e).val('0').trigger('change'));
                         $('#frmRegister').trigger("reset");
                         $('#addeditcliente').val(jsonData["Id_Cliente"]).trigger('change');
                         Table.draw();
