+Demandas por estado y región

--- a/KLS_WEB/KLS_WEB/Views/Login/Login.cshtml
+++ b/KLS_WEB/KLS_WEB/Views/Login/Login.cshtml
@@ -53,7 +53,7 @@
                     }
 
                 </div>
-                <a class="w-100 btn-link text-center d-block pt-3 pb-3 c-pointer size-12">Olvidé mi contraseña</a>
+                <a asp-controller="Login" asp-action="ResetPassword" class="w-100 btn-link text-center d-block pt-3 pb-3 c-pointer size-12">Olvidé mi contraseña</a>
             </div>
         </div>
     </div>
