--- a/KLS_WEB/KLS_WEB/Views/Route/Index.cshtml
+++ b/KLS_WEB/KLS_WEB/Views/Route/Index.cshtml
@@ -47,7 +47,25 @@
             loadCity();
             loadState();
             setTimeout(() => loadTable(), 1000);
+            FormatMoney();
         });
+
+        const FormatMoney = () => {
+            const minimo = $('#fpreciominimo').val();
+            const maximo = $('#fpreciomaximo').val();
+            $('#fpreciominimo').val(parseMoney(minimo));
+            $('#fpreciomaximo').val(parseMoney(maximo));
+        }
+
+        const parseMoney = val => {
+            val = !isNaN(val - parseFloat(val)) ? parseFloat(val) : 0;
+
+            const money = new Intl.NumberFormat('es-MX',
+                { style: 'currency', currency: 'MXN' }
+            ).format(val);
+
+            return money;
+        }
 
         function AddEdit(id, button) {
             const boton = jQuery(button);
